@@ -71,7 +71,7 @@ _ged_process_list(struct ged *gedp)
 	struct bu_vls pline = BU_VLS_INIT_ZERO;
 	struct bu_vls cmdroot = BU_VLS_INIT_ZERO;
 	const char * const *argv;
-	int argc = bu_process_args(NULL, &argv, rrp->p);
+	int argc = bu_process_args_n(rrp->p, NULL, &argv);
 	int pid = bu_process_pid(rrp->p);
 	(void)bu_path_component(&cmdroot, argv[0], BU_PATH_BASENAME_EXTLESS);
 	bu_vls_sprintf(&pline, "%*d %s", longest_pid, pid, bu_vls_cstr(&cmdroot));
@@ -139,7 +139,7 @@ _ged_process_gabort(struct ged *gedp, int argc, const char **argv)
     for (size_t i = 0; i < BU_PTBL_LEN(&gedp->ged_subp); i++) {
 	rrp = (struct ged_subprocess *)BU_PTBL_GET(&gedp->ged_subp, i);
 	const char *cmd;
-	int argcnt = bu_process_args(&cmd, NULL, rrp->p);
+	int argcnt = bu_process_args_n(rrp->p, &cmd, NULL);
 	bu_vls_trunc(&cmdroot, 0);
 	if (argcnt > 0 && bu_path_component(&cmdroot, cmd, BU_PATH_BASENAME_EXTLESS)) {
 	    for (int j = 0; j < argc; j++) {
