@@ -60,7 +60,7 @@ ged_rtabort_core(struct ged *gedp, int argc, const char *argv[])
     for (size_t i = 0; i < BU_PTBL_LEN(&gedp->ged_subp); i++) {
 	rrp = (struct ged_subprocess *)BU_PTBL_GET(&gedp->ged_subp, i);
 	const char *cmd;
-	int argcnt = bu_process_args(&cmd, NULL, rrp->p);
+	int argcnt = bu_process_args_n(rrp->p, &cmd, NULL);
 	bu_vls_trunc(&cmdroot, 0);
 	if (argcnt > 0 && bu_path_component(&cmdroot, cmd, BU_PATH_BASENAME_EXTLESS)) {
 	    if (BU_STR_EQUAL(bu_vls_cstr(&cmdroot), "rt") ||
